  + New Clone/CopyTo/DrawInto/Clear/TransformColors/Quantize/Dither overloads with IAsyncContext parameter.
  + New Resize/BeginResize/EndResize/ResizeAsync methods
! IQuantizingSession interface:
  ! New IsGrayscale property. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
    this property returns false if not implemented.
+ New KnownPixelFormat enum. The names of the actual formats are compatible with System.Drawing.Imaging.PixelFormat
  but some of them have different underlying values. Use the ToPixelFormat extension from KGySoft.Drawing to convert
  it to a System.Drawing.Imaging.PixelFormat.
+ New IBitmapDataRowMovable, IReadableBitmapDataRowMovable, IWritableBitmapDataRowMovable and
  IReadWriteBitmapDataRowMovable interfaces
+ New KnownPixelFormatExtensions class
+ Palette class:
  + New public constructor to create a new Palette from an existing one with different back color and alpha
    threshold values.
  + The IsGrayscale and HasAlpha properties have been made public.
+ PixelFormatInfo struct:
  + New public constructor from KnownPixelFormat
  + New IsCustomFormat property
  + Implementing IEquatable<PixelFormatInfo>
  + Equality and inequality operators are overloaded
  + New ToKnownPixelFormat method
+ New QuantizerExtensions class to initialize a quantizing session asynchronously (.NET Framework 4.0 and above)
+ New DithererExtensions class to initialize a dithering session asynchronously (.NET Framework 4.0 and above)
+ Color32 struct:
  + Making Color32 serializable
  + New implicit conversions to and from Color.
+ PredefinedColorsQuantizer class:
  + New public BackColor, AlphaThreshold and Palette properties.
+ OptimizedPaletteQuantizer class:
  + New BackColor, AlphaThreshold and MaxColors properties.
* ColorExtensions class:
  * Blend method: improving performance when blending with opaque background color.

NOTE: See the history of older versions at the following link: